Fix missing margin on h4

--- a/src/assets/css/ghme.css
+++ b/src/assets/css/ghme.css
@@ -51,6 +51,7 @@ article > h1,
 article > h2,
 article > h3,
 article > h5,
+article > h4,
 article > h6,
 article > blockquote,
 article > ul,
